# enthusiast-starter-fork

./: .gitignore  README.md  docker-compose.yml
config/: settings_override.py
src/: pyproject.toml
src/enthusiast_custom/: __init__.py
src/enthusiast_custom/examples/: pdf_documents_plugin.py
src/enthusiast_custom/examples/document_context_agent/: README.md  __init__.py  agent.py  config.py  prompt.py
src/enthusiast_custom/examples/document_context_agent/tools/: __init__.py  document_context_tool.py
