[tool.poetry]
name = "enthusiast-custom"
version = "1.0.0"
description = "A custom package for Enthusiast"
authors = ["Enthusiast User <user@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
enthusiast-common = ">=1,<2"
langchain-community = "^0.3.27"
enthusiast-agent-catalog-enrichment = "^1.3.0"
enthusiast-agent-order-intake = "^1.3.0"
enthusiast-agent-product-search = "^1.3.0"
enthusiast-agent-user-manual-search = "^1.3.0"
enthusiast-source-medusa = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
